need to have chrome extension active even when closed but it is changing storage.local

--- a/popup.html
+++ b/popup.html
@@ -24,12 +24,15 @@
       </label>
       <span>off</span> -->
       <form id="form">
-        <select name="flip-1" id="flip-1" data-role="slider">
+        <input id="input-box" type="text" >
+        <input class="btn btn-success" type="submit" value="Productivity!">
+      </form>
+        <!-- <select name="flip-1" id="flip-1" data-role="slider">
           <option value="off">Off</option>
           <option value="on">On</option>
         </select>
         <button id="extension-button">Button</button>
-      </form>
+      </form> -->
     </div>
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
@@ -37,7 +40,7 @@
     <!-- endbuild -->
 
     <!-- build:js scripts/popup.js -->
-    <script src="background.js"></script>
+    <script src="popup.js"></script>
     <!-- endbuild -->
   </body>
 </html>
